unpackaged/main/default/objects/ET_Workforce_Visa_Master__c/ET_Workforce_Visa_Master__c.object-meta.xml
<CustomObject>
    <label>Workforce Visa Master</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Workforce Visa Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workforce Visa Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>