unpackaged/main/default/objects/ET_Workforce_Visa_Master__c/fields/ET_Emirates__c.field-meta.xml
<CustomField>
    <fullName>ET_Emirates__c</fullName>
    <label>Emirates</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Abu Dhabi</fullName>
            </value>
            <value>
                <fullName>Ajman</fullName>
            </value>
            <value>
                <fullName>Dubai</fullName>
            </value>
            <value>
                <fullName>Fujairah</fullName>
            </value>
            <value>
                <fullName>Ras Al Khaimah</fullName>
            </value>
            <value>
                <fullName>Sharjah</fullName>
            </value>
            <value>
                <fullName>Umm Al Quwain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>