unpackaged/main/default/objects/ET_Workforce_Visa_Master__c/fields/ET_Number_of_Coverage_years__c.field-meta.xml
<CustomField>
    <fullName>ET_Number_of_Coverage_years__c</fullName>
    <label>Number of Coverage years</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>