unpackaged/main/default/objects/ET_Workforce_Visa_Master__c/fields/Year_1__c.field-meta.xml
<CustomField>
    <fullName>Year_1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Year 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>