unpackaged/main/default/objects/ET_Workforce_Visa_Master__c/fields/Year_6__c.field-meta.xml
<CustomField>
    <fullName>Year_6__c</fullName>
    <label>Year 6</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>