unpackaged/main/default/objects/ET_Workforce_Visa_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ET_Api_Name__c</columns>
    <columns>ET_Emirates__c</columns>
    <columns>ET_Number_of_Coverage_years__c</columns>
    <columns>Year_1__c</columns>
    <columns>Year_2__c</columns>
    <columns>Year_3__c</columns>
    <columns>Year_4__c</columns>
    <columns>Year_5__c</columns>
    <columns>Year_6__c</columns>
    <columns>Year_7__c</columns>
    <columns>Year_8__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>